Revert "really fix print statement button flickering (#7803)"
This reverts commit 0f5c4552d9b6fc512ed9e8d714fcffbb233155f2.

--- a/src/devtools/client/debugger/src/components/Editor/Breakpoints/Breakpoints.css
+++ b/src/devtools/client/debugger/src/components/Editor/Breakpoints/Breakpoints.css
@@ -36,17 +36,12 @@
   pointer-events: all;
 }
 
-.line-action-button.no-hits button {
-  pointer-events: none;
-  background: #8abfd8;
+.empty-line .line-action-button {
+  pointer-events: none !important;
 }
 
-.editor-wrapper .line-action-button {
-  display: none;
-}
-
-.editor-wrapper:hover .line-action-button {
-  display: block;
+.empty-line .toggle-widget {
+  background: #8abfd8 !important;
 }
 
 .editor-wrapper
